crates/strz-grammar/tests/snapshots/fixtures__fixture@archetypes__archetypes_ok.snap
---
source: tests/fixtures.rs
expression: "common::tree_sexp(&tree)"
---
(source_file
  (workspace body:
    (workspace_block
      (model body:
        (model_block
          (archetypes body:
            (archetypes_block
              (archetype_definition identifier:
                (identifier) base:
                (archetype_base) body:
                (archetype_body
                  (tag_statement value:
                    (string))))
              (archetype_definition identifier:
                (identifier) base:
                (archetype_base) body:
                (archetype_body
                  (tag_statement value:
                    (string))))
              (archetype_definition identifier:
                (identifier) base:
                (archetype_base))
              (archetype_definition identifier:
                (identifier) base:
                (archetype_base
                  (identifier)) body:
                (archetype_body
                  (technology_statement value:
                    (string))
                  (tags_statement value:
                    (string))))
              (archetype_definition identifier:
                (identifier) base:
                (archetype_base) body:
                (archetype_body
                  (technology_statement value:
                    (string))
                  (tag_statement value:
                    (string))))
              (archetype_definition identifier:
                (identifier) base:
                (archetype_base) body:
                (archetype_body
                  (technology_statement value:
                    (string))
                  (tag_statement value:
                    (string))))
              (archetype_definition identifier:
                (identifier) base:
                (archetype_base
                  (relationship_operator)) body:
                (archetype_body
                  (technology_statement value:
                    (string))))))
          (software_system identifier:
            (identifier) name:
            (string))
          (software_system identifier:
            (identifier) name:
            (string) body:
            (software_system_block
              (archetype_instance identifier:
                (identifier) kind:
                (identifier) name:
                (string) body:
                (custom_element_block
                  (archetype_instance identifier:
                    (identifier) kind:
                    (identifier) name:
                    (string))
                  (archetype_instance identifier:
                    (identifier) kind:
                    (identifier) name:
                    (string) body:
                    (custom_element_block
                      (archetype_instance identifier:
                        (identifier) kind:
                        (identifier) name:
                        (string) body:
                        (custom_element_block
                          (relationship source:
                            (identifier) operator:
                            (relationship_operator archetype:
                              (relationship_archetype_name)) destination:
                            (this_keyword) attribute:
                            (string))))
                      (archetype_instance identifier:
                        (identifier) kind:
                        (identifier) name:
                        (string) body:
                        (custom_element_block
                          (relationship source:
                            (identifier) operator:
                            (relationship_operator) destination:
                            (this_keyword))
                          (relationship source:
                            (this_keyword) operator:
                            (relationship_operator) destination:
                            (identifier)))))))))))))))
