crates/strz-grammar/tests/snapshots/fixtures__fixture@archetypes__find_element_paths_ok.snap
---
source: crates/strz-grammar/tests/fixtures.rs
expression: tree_sexp(&tree)
---
(source_file
  (workspace base:
    (string) body:
    (workspace_block
      (model body:
        (model_block
          (element_directive target:
            (string) body:
            (element_directive_block
              (deployment_node name:
                (string) body:
                (deployment_node_block
                  (infrastructure_node name:
                    (string) body:
                    (deployment_node_block
                      (relationship operator:
                        (relationship_operator) destination:
                        (identifier))))))))
          (element_directive target:
            (identifier) body:
            (element_directive_block
              (deployment_node name:
                (string) body:
                (deployment_node_block
                  (infrastructure_node name:
                    (string) body:
                    (deployment_node_block
                      (relationship operator:
                        (relationship_operator) destination:
                        (identifier))))))))))
      (views body:
        (views_block
          (deployment_view scope:
            (wildcard) environment:
            (string) body:
            (deployment_view_block
              (include_statement value:
                (wildcard))
              (auto_layout_statement direction:
                (layout_direction)))))))))
